# hermes-agent

./: .gitignore  AGENTS.md  KNOWN_ISSUES.md  PROJECT_STATUS.md  STATUS.zh.md  cli.py  hermes_state.py  model_tools.py
.github/workflows/: contributor-check.yml  osv-scanner.yml  release-bundles.yml
agent/: agent_init.py  agent_runtime_helpers.py  curator.py  curator_hooks.md  curator_hooks.py  curator_hooks_demo.py  curator_hooks_real.py  learn_prompt.py  memory_manager.py  model_router.py  prompt_builder.py  skill_scoring.py  skill_utils.py  tool_executor.py  turn_context.py  turn_finalizer.py
apps/hermes-launcher/: Cargo.toml
apps/hermes-launcher/src/: main.rs  tree.rs
docs/: CURATOR_SETUP.md  updater-world.md
gateway/: run.py
hermes_cli/: adoption.py  commands.py  config.py  curator.py  main.py  middleware.py  updater_compat.py  web_server.py
hermes_cli/subcommands/: skill.py
scripts/: check_skill_related.py  cleanup_dangling_related_skills.py  release.py
scripts/release/: build-bundle.sh
skills/computer-use/: SKILL.md
tests/: e2e_test_curator_split_deprecate_dryrun.py  test_check_skill_related.py  test_curator_hooks_mutating_actions.py  test_curator_hooks_nested_keywords.py  test_curator_hooks_terminal.py  test_curator_success_clock.py  test_curator_telemetry_guard.py  test_description_routing_limit.py  test_lifecycle_states.py  test_skill_outcome_sensor.py  test_skill_scoring.py  test_tool_approval_policies.py  test_tui_gateway_server.py  test_updater_compat_fence.py
tests/agent/: test_curator.py  (+3 more)
tools/: approval.py  delegate_tool.py  mcp_dashboard_oauth.py  mcp_tool.py  registry.py  skill_manager_tool.py  skill_usage.py  skills_tool.py
(+29 files in other folders)
